[package]
name = "ruuvitag-mqtt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.9.0"
btleplug = "0.8.1"
ruuvi-sensor-protocol = "0.5.0"
futures = "0.3.16"
tokio = { version = "1.10.0", features = ["rt-multi-thread"] }
pretty_env_logger = "0.4.0"
log = "0.4"
clap = "3.0.0-beta.5"
json = "0.12.4"
